Initial Author Routes

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,10 +6,8 @@
     <title>Mybrary</title>
 </head>
 <body>
-    Before
-    <br>
+    <%- include('../partials/errorMessage.ejs') %> 
+    <%- include('../partials/header.ejs') %> 
     <%- body %> 
-    <br>
-    After
 </body>
 </html>
