--- a/views/Authors/index.ejs
+++ b/views/Authors/index.ejs
@@ -1,5 +1,5 @@
 <h2>Search Authors</h2>
-<!-- <form action="/authors" method="get">
+<form action="/authors" method="get">
     <label >Name</label>
     <input type="text" name="name" value="<%= searchOptions.name %> ">
     <button type="submit">Search</button>
@@ -7,4 +7,4 @@
 <br>
 <% authors.forEach(author => { %>
  <div><%= author.name %></div>
-<% }) %> -->
+<% }) %>
